# firefight-quadcopter-firmware

./: CMakeLists.txt  README.md
config/: flight_paths.json  network.json  sensors.yaml
docs/: architecture.md  emergency-communications.md  unity-sim-reference.md
include/actuators/: motor_controller.hpp  powder_dispersal.hpp
include/comms/: emergency_channel.hpp  telemetry_link.hpp
include/control/: manual_interface.hpp  navigation_manager.hpp
include/core/: app_context.hpp  drone_state_machine.hpp
include/integration/: unity_adapter.hpp
include/sensors/: co2_analyzer.hpp  gps_receiver.hpp  thermal_scanner.hpp
include/services/: battery_manager.hpp  return_to_base.hpp
scripts/: deploy.sh  flash_sdcard.sh
src/: main.cpp
src/actuators/: motor_controller.cpp  powder_dispersal.cpp
src/comms/: emergency_channel.cpp  telemetry_link.cpp
src/control/: manual_interface.cpp  navigation_manager.cpp
src/core/: app_context.cpp  drone_state_machine.cpp
src/integration/: unity_adapter.cpp
src/sensors/: co2_analyzer.cpp  gps_receiver.cpp  thermal_scanner.cpp
src/services/: battery_manager.cpp  return_to_base.cpp
test/: CMakeLists.txt
test/core/: drone_state_machine_tests.cpp
tools/: log_replayer.py
